# manager-dna

./: .gitignore  CLAUDE.md  README.md  config.yaml  pyproject.toml  requirements.txt  run_pipeline.py
docs/: READING_THE_GRAPHS.md
notebooks/: manager_dna_colab.ipynb
prototype_py/: Fama-French Active Factor Extraction.py  GMM Regime Modeling.py  PCA & Network Clustering.py
skill_manager_dna/: financial_advisor_cfa.md  mathematical_research_reference.md
src/manager_dna/: __init__.py  dna_mapper.py  factor_extraction.py  hull_adjustment.py  pipeline.py  regime_model.py
