[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "manager-dna"
version = "0.1.0"
description = "Reverse-engineer the behavioral DNA of active ETF managers via Fama-French factor decomposition, GMM regime modeling, and bipartite network clustering."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "James Kidd", email = "james.kidd02@hotmail.com"},
]
keywords = ["quantitative-finance", "fama-french", "gmm", "pca", "network-analysis", "etf"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Office/Business :: Financial",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "pandas>=2.0",
    "numpy>=1.24",
    "yfinance>=0.2.31",
    "pandas-datareader>=0.10.0",
    "statsmodels>=0.14",
    "scikit-learn>=1.3",
    "networkx>=3.1",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
notebook = ["jupyter", "ipywidgets"]

[project.scripts]
manager-dna = "manager_dna.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
